# Labya_compute

./: DEPLOYMENT.md  INTEGRATION_GUIDE.md  LICENSE  README.md  activity.txt  build_agent.py  debug-502.sh  deploy-fix.sh  diagnose-services.sh  docker-compose.yml  fix-permissions.sh  generate_activity.py  labhya_key.pem  restart-services.sh  test-connection.sh
.github/workflows/: build-agent.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  create_test_data.py  db.sqlite3  debug_renters.py  deploy.sh  gunicorn.conf.py  manage.py  nginx.conf  pyproject.toml  register_test_gpu.py  requirements.txt  setup_test_users.py  test_api.py  test_relay_system.py
backend/agent/: agent.py  agent_app.py  agent_app_v2.py  agent_gui.py  agent_launcher.py
backend/agent/docker/session/: Dockerfile
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_remove_gpu_gpu_model.py  0003_gpu_gpu_model.py  0004_alter_wallet_currency.py  0005_session_connection_error_session_connection_status_and_more.py  0006_remove_host_host_email_remove_host_host_name_and_more.py  0007_make_user_non_null.py  0008_relayport.py  0009_alter_session_start_time.py
backend/app/: auth_utils.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  dashboard.py  gpus.py  sessions.py  wallets.py
backend/labhya_compute/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/lib/: api.ts  app-store.ts  auth-store.ts  (+1 more)
(+7 files in other folders)
